fixed overlapped layout in show-open-post.php

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -60,3 +60,14 @@ a {
         display: none;
     }
 }
+
+/* progress bar */
+.progress-custom {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.comment-send {
+    margin-right: 0;
+    margin-left: 0;
+}
